--- a/style.css
+++ b/style.css
@@ -12,10 +12,41 @@
 	color: #FFF;
 }
 
+.navbar-header {
+	width: 100%;
+}
+
 .logo {
 	margin-top: 1px;
 	padding: 0 0 0 0;
 	border-radius: 50%;
 	width: 45px;
 	height: 45px;
+}
+
+.navbar-right{
+	margin-right: 50px;
+	margin-top: 7px;
+	font-size: 16px;
+	font-family: arial;
+	color: #FFF;
+}
+
+.navbar-form{
+	margin-left: 25px; 
+}
+#top-contain {
+	width: 70%;
+}
+
+#top-search {
+	margin-left: 25px;
+	width: 100%;
+}
+
+#user {
+	font-size: 12px;
+	font-family: arial;
+	color: #000;
+
 }
