--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-.nav-top {
+/* Nav Content CSS */
 
+.nav-top {
   background-color: #2f63df;
   border-color: #a9c1f9;
   width: 100%;
@@ -50,3 +51,17 @@
 	color: #000;
 
 }
+
+/* Main Content CSS */
+ #jumbotron-img {
+ 	height: 400px;
+ 	width: 100%;
+ }
+
+ #user-img {
+ 	position: relative;
+ 	margin-left: 15px;
+ 	margin-top: -18%;
+ 	height: 250px;
+ 	width: 180px;
+ }
