--- a/style.css
+++ b/style.css
@@ -53,9 +53,16 @@
 }
 
 /* Main Content CSS */
+
  #jumbotron-img {
+ 	position: relative;
+ 	margin-top: -1.8%;
  	height: 400px;
  	width: 100%;
+ }
+
+ #pictures {
+ 	position: static;
  }
 
  #user-img {
@@ -64,4 +71,60 @@
  	margin-top: -18%;
  	height: 250px;
  	width: 180px;
+ 	border: 1px solid;
+ 	z-index: 0;
  }
+#content-menu{
+	width:50%;
+}
+
+#edit-profile {
+	position: relative;
+	margin-left: 75%;
+	z-index: 1;
+}
+
+ #content-nav {
+ 	position: relative;
+ 	margin-top: -3.3%;
+ 	margin-left: 16.69%;
+ 	margin-right: -80.31%;
+ 	width: 100%;
+ }
+
+ #top-content {
+ 	border: 1px solid;
+ }
+
+ .nav-justified > li > a {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-bottom: 0;
+  font-weight: bold;
+  color: #000;
+  text-align: center;
+  background-color: #e5e5e5; /* Old browsers */
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e5e5e5));
+  background-image: -webkit-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%);
+  background-image:      -o-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%);
+  background-image:         linear-gradient(to bottom, #f5f5f5 0%,#e5e5e5 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
+  background-repeat: repeat-x; /* Repeat the gradient */
+  border-bottom: 1px solid #d5d5d5;
+}
+
+.nav-justified > .active > a,
+.nav-justified > .active > a:hover,
+.nav-justified > .active > a:focus {
+  background-color: #ddd;
+  background-image: none;
+  -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.15);
+          box-shadow: inset 0 3px 7px rgba(0,0,0,.15);
+}
+.nav-justified > li:first-child > a {
+  border-radius: 5px 5px 0 0;
+}
+.nav-justified > li:last-child > a {
+  border-bottom: 0;
+  border-radius: 0 0 5px 5px;
+}
